--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   },
   "dependencies": {
     "nuxt": "^3.12.4",
+    "shadcn-nuxt": "^0.10.4",
     "vue": "latest"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.9"
   }
 }
