--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "^1.4.5",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "nuxt": "^3.12.4",
+    "nuxt-icon": "^1.0.0-beta.7",
     "shadcn-nuxt": "^0.10.4",
     "vue": "latest"
   },
