feat: add tabs ui (2024-08-15, 2:40)

--- a/components.json
+++ b/components.json
@@ -1,8 +1,8 @@
 {
   "$schema": "https://shadcn-vue.com/schema.json",
   "style": "default",
-  "typescript": false,
-  "tsConfigPath": ".nuxt/jsconfig.json",
+  "typescript": true,
+  "tsConfigPath": ".nuxt/tsconfig.json",
   "tailwind": {
     "config": "tailwind.config.js",
     "css": "assets/css/tailwind.css",
